--- a/index.html
+++ b/index.html
@@ -1,82 +1,30 @@
-<!-- source: https://bl.ocks.org/wvengen/cab9b01816490edb7083 -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>d3.chart.sankey (product demo)</title>
-    <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script src="https://cdn.rawgit.com/newrelic-forks/d3-plugins-sankey/master/sankey.js"></script>
-    <script src="https://cdn.rawgit.com/misoproject/d3.chart/master/d3.chart.min.js"></script>
-    <script src="https://cdn.rawgit.com/q-m/d3.chart.sankey/master/d3.chart.sankey.min.js"></script>
-    <style>
-      body {
-        padding: 10px;
-        min-width: 600px;
-        max-width: 1200px;
-        margin: auto;
-      }
-      #chart {
-        height: 500px;
-        font: 13px sans-serif;
-      }
-      .node rect {
-        fill-opacity: .9;
-        shape-rendering: crispEdges;
-        stroke-width: 0;
-      }
-      .node text {
-        text-shadow: 0 1px 0 #fff;
-      }
-      .link {
-        fill: none;
-        stroke: #000;
-        stroke-opacity: .2;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="chart"></div>
-
-    <script>
-      var colors = {
-            'breast_cancer': '#e87db3',
-            'prostate_cancer': '#f0972c',
-            'heart_disease': '#766ab0',
-            'motor_neuron_disease': '#ababab',
-            'hiv_aids': '#e4202c',
-            'copd': '#7acbd2',
-            'diabetes': '#53ba4a',
-            'suicide': '#fbf624'
-          };
-      d3.json("data-money-sorted.json", function(error, json) {
-        var chart = d3.select("#chart").append("svg").chart("Sankey.Path");
-        chart
-          .name(label)
-          .colorNodes(function(name, node) {
-            return color(node, 1) || colors.fallback;
-          })
-          .colorLinks(function(link) {
-            return color(link.source, 4) || color(link.target, 1) || colors.fallback;
-          })
-          .nodeWidth(15)
-          .nodePadding(10)
-          .spread(true)
-          .iterations(0)
-          .draw(json);
-        function label(node) {
-          return node.name.replace(/\s*\(.*?\)$/, '');
-        }
-        function color(node, depth) {
-          var id = node.id.replace(/(_score)?(_\d+)?$/, '');
-          if (colors[id]) {
-            return colors[id];
-          } else if (depth > 0 && node.targetLinks && node.targetLinks.length == 1) {
-            return color(node.targetLinks[0].source, depth-1);
-          } else {
-            return null;
-          }
-        }
-      });
-    </script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IS2101 Group 5 Infographics Presentation Graphs</title>
+</head>
+<body>
+  <h3>Graphs static sites</h3>
+  <ul>
+    <li><a href="pie-money.html">Pie-Money</a></li>
+    <li><a href="pie-deaths.html">Pie-Deaths</a></li>
+    <li><a href="pie-deaths-money-sorted.html">Pie-Deaths-Money-Sorted</a></li>
+    <li><a href="bar-money-deaths.html">Bar-Money-Deaths</a></li>
+    <li><a href="bar-disease.html">Bar-Disease</a></li>
+    <li><a href="sankey-money-sorted.html">Sankey-Money-Sorted</a></li>
+    <li><a href="sankey-deaths-sorted.html">Sankey-Deaths-Sorted</a></li>
+  </ul>
+  <h3>Graphs images</h3>
+  <ul>
+    <li><a href="pie-money.png">Pie-Money</a></li>
+    <li><a href="pie-deaths.png">Pie-Deaths</a></li>
+    <li><a href="pie-deaths-money-sorted.png">Pie-Deaths-Money-Sorted</a></li>
+    <li><a href="bar-money-deaths.png">Bar-Money-Deaths</a></li>
+    <li><a href="bar-disease.png">Bar-Disease</a></li>
+    <li><a href="sankey-money-sorted.png">Sankey-Money-Sorted</a></li>
+    <li><a href="sankey-deaths-sorted.png">Sankey-Deaths-Sorted</a></li>
+  </ul>
+</body>
 </html>
